# backend/company/internal/usecase/list_companies/request.go
@@ -1,0 +1,7 @@
+package list_companies
+
+type Request struct {
+	Order  Order
+	Limit  int
+	Cursor string
+}
