# backend/company/internal/usecase/list_companies/response.go
@@ -1,4 +1,4 @@
-package entities
+package list_companies
 
 import (
 	"time"
@@ -6,14 +6,15 @@ import (
 	"github.com/google/uuid"
 )
 
-type Company struct {
+type CompanySummary struct {
 	ID               uuid.UUID `db:"id"`
 	Name             string    `db:"name"`
 	OpenVacanciesCnt int       `db:"open_vacancies_count"`
-	Description      *string   `db:"description"`
-	Website          *string   `db:"website"`
 	LogoKey          *string   `db:"logo_key"`
-	OwnerID          uuid.UUID `db:"owner_id"`
 	CreatedAt        time.Time `db:"created_at"`
-	UpdatedAt        time.Time `db:"updated_at"`
+}
+
+type Response struct {
+	Companies  []CompanySummary
+	NextCursor *string
 }
